--- a/public/css/tooplate-style.css
+++ b/public/css/tooplate-style.css
@@ -224,10 +224,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-  background: url('../images/homebg.jpeg') 50% 0 repeat-y fixed;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 60% 10%;
+  background: url('../images/homebg.jpeg') center center / cover no-repeat fixed;
   display: -webkit-box;
   display: -webkit-flex;
    display: -ms-flexbox;
@@ -236,7 +233,10 @@ a:hover, a:active, a:focus {
   -webkit-align-items: center;
   -ms-flex-align: center;
    align-items: center;
+  min-height: 100vh;
+  min-height: 100dvh;
   height: 100vh;
+  height: 100dvh;
   position: relative;
   text-align: left;
 }
@@ -672,7 +672,11 @@ footer p {
 
 @media (max-width: 980px) {
   #home {
-    height: 55vh;
+    min-height: 100vh;
+    min-height: 100dvh;
+    height: 100vh;
+    height: 100dvh;
+    background-attachment: scroll;
   }
 
   .service-thumb {
@@ -688,7 +692,12 @@ footer p {
 
 @media (max-width: 768px) {
   #home {
-    height: 85vh;
+    min-height: 100vh;
+    min-height: 100dvh;
+    min-height: -webkit-fill-available;
+    height: 100vh;
+    height: 100dvh;
+    background-attachment: scroll;
   }
 }
 
@@ -704,7 +713,11 @@ footer p {
   }
 
   #home {
-    height: 95vh;
+    min-height: 100vh;
+    min-height: 100dvh;
+    min-height: -webkit-fill-available;
+    height: 100vh;
+    height: 100dvh;
   }
 
   .contact-info {
@@ -715,7 +728,11 @@ footer p {
 
 @media (max-width: 320px) {
   #home {
-    height: 125vh;
+    min-height: 100vh;
+    min-height: 100dvh;
+    min-height: -webkit-fill-available;
+    height: 100vh;
+    height: 100dvh;
   }
 }
 
